[package]
authors = [
  "Anton Lazarev <https://antonok.com>",
  "James Waples <james@wapl.es>",
]
categories = ["embedded", "no-std"]
description = "`display-interface` compatible driver for the SSD1309 OLED display controller"
documentation = "https://docs.rs/ssd1309"
repository = "https://github.com/antonok-edm/ssd1309"
exclude = ["readme_banner.jpg", "doc"]
keywords = ["no-std", "ssd1309", "oled", "embedded", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
name = "ssd1309"
readme = "README.md"
version = "0.4.0"
edition = "2021"

[dependencies]
embedded-hal = "1"
display-interface = "0.5"
embedded-graphics-core = { version = "0.4", optional = true }

[dev-dependencies]
embedded-graphics = "0.8"
display-interface-i2c = "0.5"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
